--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,47 @@
 plugins {
     id 'java-library'
     id 'io.qameta.allure' version '2.10.0'
-}
-
-allure {
-    report {
-        version.set("2.19.0")
-    }
-    adapter {
-        aspectjWeaver.set(true)
-        frameworks {
-            junit5 {
-                adapterVersion.set("2.19.0")
-            }
-        }
-    }
+    id "io.freefair.lombok" version "6.0.0-m2"
 }
 
 repositories {
     mavenCentral()
 }
 
-def restAssuredVersion = "5.2.0",
+def allureVersion = "2.19.0",
+    selenideVersion = "6.9.0",
+    restAssuredVersion = "5.1.1",
+    appiumVersion = "8.1.1",
+    assertJVersion = "3.23.1",
     junitVersion = "5.9.0",
-    slf4jVersion = "1.7.32",
-    jacksonVersion = "2.13.4",
-    selenideVersion = "6.8.1",
-    allureVersion = "2.19.0",
-    fakerVersion = "1.0.2",
-    ownerVersion = "1.0.4"
+    ownerVersion = "1.0.4",
+    slf4jVersion = "1.7.32"
+
+allure {
+    report {
+        version.set(allureVersion)
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set(allureVersion) //версия интеграции фреймворка и Allure
+            }
+        }
+    }
+}
 
 dependencies {
     testImplementation(
-            "io.rest-assured:rest-assured:$restAssuredVersion",
-            "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion",
-            "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion",
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "com.github.javafaker:javafaker:$fakerVersion",
-            "org.aeonbits.owner:owner:$ownerVersion"
+            "io.rest-assured:rest-assured:$restAssuredVersion",
+            "io.qameta.allure:allure-rest-assured:$allureVersion",
+            "org.assertj:assertj-core:$assertJVersion",
+            "io.appium:java-client:$appiumVersion",
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
+            "org.aeonbits.owner:owner:$ownerVersion",
+            "org.slf4j:slf4j-simple:$slf4jVersion"
     )
 }
 
