--- a/src/test/resources/remote.properties
+++ b/src/test/resources/remote.properties
@@ -5,5 +5,5 @@ appUrl=bs://c700ce60cf13ae8ed97705a55b8e022f13c5827c
 device=Samsung Galaxy S22
 os_version=12.0
 project=Homework
-build=browserstack and selenoid
+build=browserstack and jenkins
 name=Search tests
